<resources>
    <string name="app_name">Eight Queens</string>
    <string name="return1">Try Again</string>
    <string name="queens_game">8 Queens game</string>
    <string name="start_game">Start Game</string>
    <string name="game_started">Game started</string>
    <string name="queens_to_place">queens to place</string>
    <string name="game_finished">Game already finished!!</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game over!</string>
    <string name="queen_on_cell">Queen on cell:</string>
    <string name="queen_removed">Queen Removed</string>
    <string name="unable_turn">Unable set up on</string>
    <string name="unable_turn2">You can\'t put Queen on</string>
    <string name="help">Help</string>
    <string name="hide_help">Hide help</string>
    <string name="find_for_8_queens_secured_place">Find for 8 queens secured place</string>
    <string name="queen_left_simple">left.</string>
    <string name="queen_left_multiple">left.</string>
    <string name="congrats">Congratulations!</string>
    <string name="back">Back to menu</string>
    <string name="queen_single">Queen</string>
    <string name="queen_multiple">Queens</string>
    <string name="easy">easy</string>
    <string name="normal">normal</string>
    <string name="hard">hard</string>
    <string name="profi">profi</string>
    <string name="select_difficulty">Select difficulty level</string>
    <string name="time_expired">Time Expired!</string>
    <string name="unlimited">Unlimited</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="game_duration">Game duration:</string>
    <string name="help_requests">Help requests:</string>
    <string name="fig_removes">Figure removes:</string>
    <string name="game_log">Log</string>
    <string name="hide_log">Hide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
