<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_for_8_queens_secured_place"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical|end"
                android:layout_marginEnd="@dimen/base_margin"
                android:gravity="center_vertical|center_horizontal|end" />
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/boardLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/queen_edge"
            android:layout_height="@dimen/queen_edge"
            android:layout_gravity="center_vertical|start"
            app:srcCompat="@drawable/queen" />

        <TextView
            android:id="@+id/tv_free_queens"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_weight="4"
            android:gravity="center_vertical|start"
            android:text="dsg"
            android:textAlignment="gravity" />

        <Button
            android:id="@+id/btn_show_log"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_gravity="right|end"

            android:text="@string/game_log" />

        <Button
            android:id="@+id/btn_hide_log"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_gravity="top|right|end"
            android:text="@string/hide_log"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:orientation="horizontal"
        android:visibility="gone">


        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_game_stat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/queen_edge"
                            android:layout_height="@dimen/queen_edge"
                            android:layout_gravity="center_vertical|start"
                            app:srcCompat="@drawable/clock" />

                        <TextView
                            android:id="@+id/tv_timer_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/base_margin"
                            android:gravity="left|start"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/queen_edge"
                            android:layout_height="@dimen/queen_edge"
                            android:layout_gravity="center_vertical|start"
                            app:srcCompat="@drawable/help_grid" />

                        <TextView
                            android:id="@+id/tv_helps_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/base_margin"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/queen_edge"
                            android:layout_height="@dimen/queen_edge"
                            android:layout_gravity="center_vertical|start"
                            app:srcCompat="@drawable/replay" />

                        <TextView
                            android:id="@+id/tv_removes_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/base_margin"
                            android:layout_weight="1" />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_game_finish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_finish_picture"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_finish_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorDarkRed"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginBottom="16dp"
                    android:baselineAligned="false"
                    android:paddingBottom="28dp"
                    android:visibility="gone" />

            </FrameLayout>




        </LinearLayout>
    </ScrollView>



</LinearLayout>